# PySimpleInput

./: .README.md.swo  .gitignore  .inputter.py.swp  LICENSE  Makefile  README.md  inputter.py  mas.py  pyproject.toml  requirements.txt  setup.py  test.py  testClass.py
.github/workflows/: python-package-conda.yml
PySimpleInput/: .inputter.py.swp  .wiki.py.swp  __init__.py  __version__.py  inputter.py  inputter_old.py  wiki.py
PySimpleInput.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: PySimpleInput.rst  modules.rst
docs/source/: conf.py  index.rst
