[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PySimpleInput"
version = "0.0.1"
authors = [
    { name="Turtleion", email="remastred89@gmail.com" },
]
description = "Package that help you to fix general python input() problems"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/turtleion/PySimpleInput"
"Bug Tracker" = "https://github.com/turtleion/PySimpleInput/issues"
