[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PySimpleInput"
version = "0.0.5-r1"
authors = [
    { name="Turtleion", email="remastred89@gmail.com" },
]
description = "Advanced Input System"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/turtleion/PySimpleInput"
"Bug Tracker" = "https://github.com/turtleion/PySimpleInput/issues"
